#2696 - Document-level recommendations
- Fix suggestion registry class name
- Wrote a very few words of documentation
- Bit of cleaning